argocd/manifests/48__NetworkPolicy_argocd-application-controller-network-policy.yml
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: argocd-application-controller-network-policy
  namespace: argocd
  labels:
    app.kubernetes.io/instance: argocd
spec:
  ingress:
    - from:
        - namespaceSelector: {}
      ports:
        - port: 8082
  podSelector:
    matchLabels:
      app.kubernetes.io/name: argocd-application-controller
  policyTypes:
    - Ingress
